# peekview

./: .gate-history.jsonl  .gate-result.json  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  EXPERTS.md  FEATURES.md  INDEX.md  Makefile  OPENCODE.md  README.md  VERSIONS.json  cdp-smoke-test.ts  docker-compose.yml  e2e-diagram-test.ts  git-test.txt  navigate-detail.mjs  package-lock.json  package.json  screenshot-footer.mjs
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/peek/: __main__.py  cli.py  config.py  database.py  language.py  main.py  models.py  storage.py
backend/peek/api/: entries.py  files.py
backend/peek/services/: entry_service.py  file_service.py
backend/peek/static/: index.html
backend/peek/static/assets/: EntryListView-CjYcs8e1.js
backend/peekview/: __init__.py  __main__.py  auth.py  captcha_engine.py  cli.py  client.py  config.py  database.py  exceptions.py  language.py  main.py  models.py  storage.py
backend/peekview/api/: __init__.py  admin.py  auth.py  captcha.py  captcha_router.py  config_router.py  entries.py  files.py  rate_limit.py  shares.py
backend/peekview/services/: __init__.py  admin_service.py  apikey_service.py  entry_service.py  file_service.py  html_render_service.py  read_tracking_service.py  share_service.py
backend/peekview/static/: index.html
backend/peekview/static/css/: github-markdown.css
backend/scripts/: check_version.py  verify_wheel.py
backend/tests/: conftest.py  factories.py  test_admin_backup.py  test_admin_perm.py  test_admin_stats_cleanup.py  test_admin_user_api.py  test_api.py  test_apikey.py  test_archived_visibility.py  test_auth.py  test_auth_me.py  test_captcha.py  test_captcha_builtin.py  test_cli.py  test_cli_remote.py  test_client.py  test_config.py  test_content_negotiation.py  test_content_type.py  test_database.py  test_diagram_config.py  test_entry_lifecycle.py  test_entry_service.py  test_exceptions.py  test_file_service.py  test_fts_content.py  test_html_render.py  test_language.py  test_lifespan_cleanup.py  test_migration.py  test_models.py  test_prometheus_metrics.py  test_raw_api.py  test_read_tracking.py  test_security.py  test_share_access.py  test_share_cookie.py  test_share_create.py  test_share_lifecycle.py  test_share_list.py  (+10 more)
(+6394 files in other folders)
